# invoicegen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
samples/: october.csv
schemas/: header.schema.json  invoice.schema.json  jobline.schema.json  lineitem.schemas.json  schema_from_model.py
src/invoicegen/: cli.py  models.py  models_header.py  models_invoice.py  models_jobline.py
src/invoicegen/config/: __init__.py  business.yaml  invoicegen.yaml  models.py
src/invoicegen/core/: __init__.py  grouping.py
src/invoicegen/models/: __init__.py  header.py  invoice.py
tests/: test_grouping.py  test_header_errors.py  test_header_valid.py  test_invoice_errors.py  test_invoice_valid.py  test_jobline_errors.py  test_jobline_valid.py  test_models.py  tests_smoke.py
